# mlx-openai-local

./: .env.example  .gitignore  BUG_FIX_DUCKDUCKGO_TYPE_ERROR.md  BUG_FIX_JSON_PARSING_AND_DATA_FABRICATION.md  BUG_FIX_STOCK_COMPANY_NAMES.md  BUG_FIX_UNWANTED_TOOL_CALLS.md  BUG_FIX_WEB_SEARCH_NO_RESULTS.md  CLAUDE.md  IMPROVEMENTS_SUMMARY.md  MODEL_20B_SETUP.md  README.md  TOOL_CALLING_EXPLAINED.md  VOICE_FEATURES_ADDED.md  pyproject.toml  requirements.txt  test_stock_queries.py  test_tool_curl.sh  test_tool_execution.py
docs/: CLEANUP_CHANGELOG.md  COMPREHENSIVE_FEATURES.md  CONFIGURATION_GUIDE.md  ENHANCED_WEB_SEARCH.md  FINANCIAL_DATA_ADDED.md  FIXES_APPLIED.md  FUNCTION_CALLING_STATUS.md  MIGRATION_COMPLETE.md  ORCHESTRATION_SCRIPT_UPDATE.md  PROJECT_STRUCTURE.md  REAL_WEBSEARCH_INTEGRATION.md  SMART_TOOL_USAGE.md  SUCCESS.md  SUMMARY_CLAUDE_LIKE_SEARCH.md  TEST_RESULTS.md  TOOL_CALLING_GUIDE.md  UI_FIX.md  UI_IMPROVEMENTS.md  VOICE_TRANSCRIPTION_GUIDE.md  WEB_SEARCH_READY.md
examples/: README.md  langchain_basic.py  langchain_function_calling.py  langchain_streaming.py
scripts/: orchestrate.sh  setup_comprehensive.sh
server/: __init__.py  app.py  model_manager.py  openai_schemas.py  smart_router.py  utils.py
server/agents/: comprehensive_agent.py
server/prompts/: system_prompt.py
server/tools/: __init__.py  calculator.py  code_execution.py  enhanced_web_search.py  file_analysis.py  financial_data.py  rag.py  registry.py  response_formatter.py  table_formatter.py  voice.py  web_search.py
tests/: comprehensive_test_suite.py  test_chat.json  test_chat.py  test_chat_request.json  test_curl_enhanced.sh  test_direct_tool.py  test_enhanced_weather_api.json  test_function_call.json  test_model.py  test_report_20251018_025036.md  test_report_20251018_025533.md  test_report_20251018_025943.md  test_report_20251018_030213.md  test_smoke.sh  test_transcription.py  test_tsla_history.sh  test_tsla_price.sh  test_weather.json  test_websearch_tool.json  verify_gpu.sh
tests/audio/: sample.aiff
ui/: ControlPanel.py
